fix collapse in filter

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1116,7 +1116,7 @@ html[lang=en] .main-top {
 
 .accordion-button::after {
     position: absolute;
-    right: 0;
+    left: 0;
 }
 
 .accordion-item {
